--- a/.github/django.yml
+++ b/.github/django.yml
@@ -1,42 +1,42 @@
-name: Saasy CI
+# name: Saasy CI
 
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-jobs:
-  build:
+# on:
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master ]
+# jobs:
+#   build:
 
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.7]
+#     runs-on: ubuntu-latest
+#     strategy:
+#       max-parallel: 4
+#       matrix:
+#         python-version: [3.7]
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -e . pip
-        pip install setuptools wheel twine
-    - name: Run Tests
-      run: |
-        cd develop
-        python manage.py test saasy
-    - name: Build Package
-      run: |
-        python setup.py sdist bdist_wheel
-    - name: Publish a Python distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@v1.1.0
-      with:
-        user: __token__
-        password: ${{ secrets.pypi_password }}
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up Python ${{ matrix.python-version }}
+#       uses: actions/setup-python@v1
+#       with:
+#         python-version: ${{ matrix.python-version }}
+#     - name: Install Dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         python -m pip install -e . pip
+#         pip install setuptools wheel twine
+#     - name: Run Tests
+#       run: |
+#         cd develop
+#         python manage.py test saasy
+#     - name: Build Package
+#       run: |
+#         python setup.py sdist bdist_wheel
+#     - name: Publish a Python distribution to PyPI
+#       uses: pypa/gh-action-pypi-publish@v1.1.0
+#       with:
+#         user: __token__
+#         password: ${{ secrets.pypi_password }}
       
       
