--- a/.github/workflows/saasy_ci.yml
+++ b/.github/workflows/saasy_ci.yml
@@ -29,14 +29,14 @@ jobs:
         python manage.py test saasy
       env: 
         DJANGO_DEBUG: 1
-    # - name: Install Build Dependencies
-    #   run: |
-    #     python -m pip install -e .[build]
-    # - name: Build Package
-    #   run: |
-    #     python setup.py sdist bdist_wheel
-    # - name: Publish a Python distribution to PyPI
-    #   uses: pypa/gh-action-pypi-publish@v1.1.0
-    #   with:
-    #     user: __token__
-    #     password: ${{ secrets.pypi_password }}
+    - name: Install Build Dependencies
+      run: |
+        python -m pip install -e .[build]
+    - name: Build Package
+      run: |
+        python setup.py sdist bdist_wheel
+    - name: Publish a Python distribution to PyPI
+      uses: pypa/gh-action-pypi-publish@v1.1.0
+      with:
+        user: __token__
+        password: ${{ secrets.pypi_password }}
